--- a/app/globals.css
+++ b/app/globals.css
@@ -27,7 +27,7 @@ h1 {
 }
 @media (min-width: 1400px) {
   h1 {
-    font-size: 68px;
+    font-size: 58px;
   }
 }
 @media (max-width: 1399px) {
@@ -332,17 +332,101 @@ ul li {
 }
 
 .space-before-0 {
-  margin-top: 120px;
-}
-
-.space-after-0 {
-  margin-bottom: 120px;
+  margin-top: 60px;
 }
 
 .space-before-1 {
+  margin-top: 80px;
+}
+
+.space-before-2 {
+  margin-top: 100px;
+}
+
+.space-before-3 {
+  margin-top: 120px;
+}
+
+.space-before-4 {
   margin-top: 160px;
 }
 
+.space-after-0 {
+  margin-bottom: 60px;
+}
+
 .space-after-1 {
+  margin-bottom: 80px;
+}
+
+.space-after-2 {
+  margin-bottom: 100px;
+}
+
+.space-after-3 {
+  margin-bottom: 120px;
+}
+
+.space-after-4 {
   margin-bottom: 160px;
+}
+
+@media (min-width: 1400px) {
+  .xl-space-before-0 {
+    margin-top: 60px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-before-1 {
+    margin-top: 80px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-before-2 {
+    margin-top: 100px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-before-3 {
+    margin-top: 120px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-before-4 {
+    margin-top: 160px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-after-0 {
+    margin-bottom: 60px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-after-1 {
+    margin-bottom: 80px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-after-2 {
+    margin-bottom: 100px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-after-3 {
+    margin-bottom: 120px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .xl-space-after-4 {
+    margin-bottom: 160px;
+  }
 }/*# sourceMappingURL=globals.css.map */
