--- a/app/settings.scss
+++ b/app/settings.scss
@@ -53,3 +53,7 @@ $yellow-1: rgb(254 249 195); // bg-yellow-100
   font-family: "barlow-light";
   src: url('/Fonts/Barlow-Light.ttf') format("truetype");
 }
+@font-face {
+  font-family: "bebas";
+  src: url('/Fonts/BebasNeue-Regular.ttf') format("truetype");
+}
