--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,20 @@ body {
   display: flex;
   flex-direction: column;
 }
+body.no-scroll {
+  overflow: hidden;
+}
+
+.cookie-banner {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 1rem;
+  text-align: center;
+  z-index: 1000;
+}
 
 h1 {
   font-family: bebas;
