--- a/app/globals.scss
+++ b/app/globals.scss
@@ -15,6 +15,21 @@ body {
   min-height: 100dvh;
   display: flex;
   flex-direction: column; 
+
+  &.no-scroll {
+    overflow: hidden;
+  }
+}
+
+.cookie-banner {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #f5f5f5;
+  padding: 1rem;
+  text-align: center;
+  z-index: 1000;
 }
 
 h1 {
