--- a/app/globals.css
+++ b/app/globals.css
@@ -339,22 +339,22 @@ ul li {
 }
 
 .container {
-  max-width: unset !important;
   margin: 0 auto;
+  width: 100%;
 }
 @media (min-width: 1400px) {
   .container {
-    width: 1300px;
+    max-width: 1300px;
   }
 }
 @media (max-width: 1399px) {
   .container {
-    width: 700px;
+    max-width: 700px;
   }
 }
 @media (max-width: 767px) {
   .container {
-    width: 370px;
+    max-width: 370px;
   }
 }
 
