--- a/app/settings.scss
+++ b/app/settings.scss
@@ -36,7 +36,7 @@
 
 // colors
 
-$primary: rgb(96 165 250); // bg-400
+$primary: rgb(96 165 250); // blue-400
 $accent: rgb(254 240 138); // yellow-200
 
 $blue-1: rgb(14 165 233); // sky-500
