--- a/app/kontakt/contact.scss
+++ b/app/kontakt/contact.scss
@@ -5,6 +5,10 @@ label {
   font-family: barlow;
 }
 
+input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 input, textarea, select, textarea {
   padding: 10px 12px;
   font-family: barlow;
